# pwa-launch

./: .gitignore  Cargo.toml  LOCAL_SERVER_PLAN.md  PLAN.md  README.md  adapt.js  adapt.min.js  android.keystore  browser-tab.html  generate-keystore.sh  index.html  package-lock.json  package.json  pwa-adapt-example.html  run-dev.sh  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  publish.yml
adapt/: build.cjs
adapt/src/: appCache.js  audio.js  core.js  fs.js  index.js  network.js  persistentCache.js  sql.js  sqlite.js  storage.js  ui.js
android/: build.gradle.kts
capabilities/: default.json
icons/: icon.json
src/: App.tsx  Test.tsx  commands.rs  cookie.ts  db.rs  kv.ts  lib.rs  main.rs  main.tsx  pwa.ts  utils.rs
src-tauri/: AppRun  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-get-app-config.toml  allow-get-cookie-domains.toml  allow-get-keep-screen-on.toml  allow-read-file-content.toml  allow-read-file-range.toml  allow-set-app-config.toml  allow-set-keep-screen-on.toml
src-tauri/permissions/autogenerated/: allow-audio-get-current-url.toml  allow-audio-get-duration.toml  allow-audio-get-position.toml  allow-audio-get-state.toml  allow-audio-pause.toml  allow-audio-play.toml  allow-audio-resume.toml  allow-audio-seek.toml  allow-audio-set-loop.toml  allow-audio-set-volume.toml  allow-audio-stop.toml  allow-cache-clear.toml  allow-cache-delete.toml  allow-cache-exists.toml  allow-cache-get.toml  allow-cache-list.toml  allow-cache-set.toml  allow-cache-stats.toml  allow-clear-all-network-cache.toml  allow-clear-app-data.toml  allow-clear-webview-cache-data.toml  allow-clear-webview-cache.toml  allow-get-data-usage.toml  allow-get-system-data-info.toml  allow-read-file-content.toml  allow-read-file-range.toml  allow-sqlite-clear.toml  allow-sqlite-count.toml  allow-sqlite-create-table.toml  allow-sqlite-delete.toml  allow-sqlite-drop-table.toml  allow-sqlite-exists.toml  allow-sqlite-find-one.toml  allow-sqlite-find.toml  allow-sqlite-get-all.toml  allow-sqlite-get.toml  allow-sqlite-keys.toml  allow-sqlite-list-tables.toml  allow-sqlite-set-many.toml  allow-sqlite-set.toml  (+60 more)
src-tauri/python/: audio_player.py
src-tauri/src/: db.rs  lib.rs  local_server.rs  main.rs  models.rs  pwa.rs  utils.rs
src-tauri/src/commands/: android_audio.rs  audio_player.rs  backup.rs  cookie.rs  data_manager.rs  fetch_protocol.rs  file_dialog.rs  fs.rs  mod.rs  opfs.rs  persistent_cache.rs  proxy.rs  pwa.rs  pwa_resource_protocol.rs  python_player.rs  screen.rs  sqlite.rs  static_protocol.rs  stream_file_protocol.rs  stream_proxy.rs  webview.rs  ws_proxy.rs
src/commands/: opfs.rs  proxy.rs  pwa.rs
src/components/: AppDataManager.css  AppDataManager.tsx  AppList.tsx  AppSettings.tsx  BrowserView.tsx  ConfirmDialog.css  ConfirmDialog.tsx  DataManager.css  DataManager.tsx  ProxySettings.tsx  PwaPlayer.tsx  index.ts  types.ts
src/frontend/: App.tsx  index.html
src/hooks/: usePostMessage.ts
src/styles/: App.css  index.css
tauri-plugin-audioplayer/: Cargo.toml  build.rs  package.json
tauri-plugin-audioplayer/android/: build.gradle.kts
tauri-plugin-audioplayer/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-audioplayer/android/src/main/java/: AudioPlayerPlugin.kt  Example.kt  ExamplePlugin.kt
tauri-plugin-audioplayer/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-audioplayer/examples/tauri-app/: package.json
tauri-plugin-audioplayer/examples/tauri-app/src/: App.svelte
tauri-plugin-audioplayer/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-audioplayer/guest-js/: index.ts
tauri-plugin-audioplayer/permissions/: default.toml
tauri-plugin-audioplayer/permissions/autogenerated/: reference.md
tauri-plugin-audioplayer/permissions/autogenerated/commands/: get_current_url.toml  get_duration.toml  get_position.toml
tauri-plugin-audioplayer/permissions/schemas/: schema.json
tauri-plugin-audioplayer/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
