[package]
name = "pwa_container"
version = "0.1.0"
description = "PWA 安装容器 - 跨平台应用容器，支持 PC 和移动端"
authors = ["you"]
edition = "2021"

[lib]
name = "pwa_container_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
url = "2"
dirs = "5"
cookie = "0.18"
urlencoding = "2"
http = "1"

# Debug 模式优化 - 减小体积同时保留调试能力
[profile.dev]
opt-level = 2        # 适度优化
strip = true         # 移除调试符号，大幅减小体积
lto = "thin"         # 轻量级链接时优化
debug = false        # 禁用调试信息

# Release 模式优化 - 最小体积
[profile.release]
codegen-units = 1    # 允许 LLVM 更好优化
lto = true           # 完整链接时优化
opt-level = "s"      # 优化二进制大小
panic = "abort"      # 禁用 panic 处理
strip = true         # 移除所有符号
