[package]
name = "pwa_container"
version = "0.2.0"
description = "PWA 安装容器 - 跨平台应用容器，支持 PC 和移动端"
authors = ["you"]
edition = "2021"

[lib]
name = "pwa_container_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks", "blocking"], default-features = false }
anyhow = "1"
log = "0.4"
tauri-plugin-log = "2"
regex = "1"
url = "2"
dirs = "5"
cookie = "0.18"
urlencoding = "2"
http = "1"
base64 = "0.22"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tokio-tungstenite = "0.21"
futures-util = "0.3"
flate2 = "1"

ureq = "2"
android_logger = "0.14"
jni = { version = "0.21" }
ndk-context = { version = "0.1" }


[features]
default = []

# Debug 模式 - 快速编译
[profile.dev]
strip = true

# Release 模式优化
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
