[package]
name = "tauri-plugin-audioplayer"
version = "0.1.0"
authors = [ "PWA Container" ]
description = "Tauri plugin for audio playback on Android and Linux"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-audioplayer"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
log = "0.4"

# Desktop platforms: MPV support
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
libmpv2 = "5.0"
lazy_static = "1.4"
libc = "0.2"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }